# humor

./: .gitignore  README.md  colab_training.ipynb  pyproject.toml
.claude/: settings.local.json
configs/: default.yaml  labeling_schema.yaml
scripts/: build_knowledge_base.py  extract_events_for_review.py  extract_laughter_only.py  extract_transcript_with_events.py  fetch_channels.py  test_one_video.py  train_continual_08comedy.py
src/humor_bot/: __init__.py  cli.py
src/humor_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/humor_bot/annotator/: __init__.py  server.py
src/humor_bot/annotator/templates/: annotator.html
src/humor_bot/data_engine/: __init__.py  alignment.py  audio_analyzer.py  auto_annotator.py  facs_analyzer.py  laughter_detector.py  laughter_envelope.py  negative_collector.py  news_crawler.py  performer_analyzer.py  prosody_analyzer.py  safety_labeler.py  text_processor.py  video_analyzer.py  youtube_downloader.py
src/humor_bot/evaluation/: __init__.py  coach.py  judge.py
src/humor_bot/models/: __init__.py  joke_writer.py  multimodal_classifier.py  rag_retriever.py  script_extractor.py
src/humor_bot/pipeline/: __init__.py
src/humor_bot/training/: __init__.py  dpo_trainer.py  ppo_trainer.py  reward_model.py
