[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "humor-bot"
version = "0.1.0"
description = "幽默脫口秀 AI 機器人 — 多模態幽默偵測與生成系統"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Audio & Video
    "yt-dlp>=2024.12.0",
    "librosa>=0.10.2",
    "soundfile>=0.12.1",
    "faster-whisper>=1.1.0",

    # ML / DL Core
    "torch>=2.2.0",
    "transformers>=4.44.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",

    # YAMNet (laughter detection)
    "tensorflow>=2.16.0",
    "tensorflow-hub>=0.16.0",

    # RAG
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # Video Analysis
    "opencv-python>=4.10.0",

    # Utils
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "feedparser>=6.0.0",
    "flask>=3.0.0",
    "setuptools<70",
]

[project.optional-dependencies]
diarization = [
    "pyannote.audio>=3.1.0",
]
punctuation = [
    "modelscope>=1.10.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]
video = [
    "deepface>=0.0.93",
    "mediapipe>=0.10.14",
]
all = [
    "humor-bot[diarization,punctuation,video,dev]",
]

[project.scripts]
humor-bot = "humor_bot.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
